# testTask

./: .gitignore  CMakeLists.txt  CMakePresets.json  Readme.md
ClientApp/: CMakeLists.txt  ClientApp.cpp  ClientApp.hpp  ClientConnection.cpp  ClientConnection.hpp  ClientMain.cpp
ClientApp/ClientCommandProcessor/: Command.hpp  CommandFactory.cpp  CommandFactory.hpp  GetRangeCommand.cpp  GetRangeCommand.hpp  GetResultCommand.cpp  GetResultCommand.hpp  GetResultsProcess.cpp  GetResultsProcess.hpp  GetStatusCommand.cpp  GetStatusCommand.hpp  ResponceEvent.cpp  ResponceEvent.hpp  ServerExecutor.cpp  ServerExecutor.hpp  SetRangeCommand.cpp  SetRangeCommand.hpp  StartMeasureCommand.cpp  StartMeasureCommand.hpp  StopMeasureCommand.cpp  StopMeasureCommand.hpp
ClientApp/MVC/Controller/: ViewController.cpp  ViewController.hpp
ClientApp/MVC/DataModel/: ChannelData.cpp  ChannelData.hpp  DataModel.cpp  DataModel.hpp
ClientApp/MVC/Views/: ChannelView.cpp  ChannelView.hpp  MainView.cpp  MainView.hpp  StatusView.cpp  StatusView.hpp
ServerApp/: CMakeLists.txt  Connection.cpp  Connection.hpp  Connections.cpp  Connections.hpp  Server.cpp  Server.hpp  ServerMain.cpp
ServerApp/ChannelSimulator/: Channel.cpp  Channel.hpp  ChannelValueGenerator.cpp  ChannelValueGenerator.hpp  ChannelsConst.hpp  ChannelsSet.cpp  ChannelsSet.hpp
ServerApp/ServerCommandProcessor/: CommandProcessor.hpp  GetRangeCommand.cpp  GetRangeCommand.hpp  GetResultCommand.cpp  GetResultCommand.hpp  GetStatusCommand.cpp  GetStatusCommand.hpp  SetRangeCommand.cpp  SetRangeCommand.hpp  StartMeasureCommand.cpp  StartMeasureCommand.hpp  StopMeasureCommand.cpp  StopMeasureCommand.hpp
Utils/: ChannelEnums.cpp  ChannelEnums.hpp  ErrorCodeDefinition.cpp  ErrorCodeDefinition.hpp  Logger.cpp  Logger.hpp  Queue.hpp  SocketHandle.cpp  SocketHandle.hpp  SocketMessage.cpp  SocketMessage.hpp  SocketSysUtils.hpp
Utils/CommandProcessor/: BaseCommand.hpp  CommandProcessor.hpp  RegexFactory.hpp
